add something new

--- a/users/templates/position.html
+++ b/users/templates/position.html
@@ -60,7 +60,15 @@
     </div>
     <div class="main">
 
-    <h1>Open Positions</h1>    
+    <h1>Open Positions</h1>  
+    
+    <section>
+        <div class="position-entry">
+        <h2>Tohoku University NEXUS Postdoctoral Research Fellow Program</h2>
+        <p>We are seeking a highly motivated postdoctoral researcher to join our Quantum Lab at Tohoku University under the prestigious NEXUS Postdoctoral Research Fellow Program.</p>
+        <p><a href="{% static 'pdfs/postdoct.pdf' %}" target="_blank">Learn more and apply</a></p>
+    </div>
+
     <section>
         <div class="position-entry">
         <h2>JSPS Postdoctoral Fellowship</h2>
