add something new

--- a/users/templates/member.html
+++ b/users/templates/member.html
@@ -70,7 +70,7 @@
                 <h2>Le, Binho</h2>
                 <h3><a href="https://www.fris.tohoku.ac.jp/en/researcher/creative/lebinho.html" target="_blank" style="text-decoration: none; color: blue;">
                 Assistant Professor (PI)</a></h3>
-                <h3><a href="https://www.ti-fris.tohoku.ac.jp/en/fellow/" target="_blank" style="text-decoration: none; color: blue;">
+                <h3><a href="https://www.ti-fris.tohoku.ac.jp/en/fellow/detail---id-372.html" target="_blank" style="text-decoration: none; color: blue;">
                 TI-FRIS Fellow (Title)</a></h3>
                 <h3><a href="https://web.tohoku.ac.jp/dr/index.html" target="_blank" style="text-decoration: none; color: blue;">
                 Prominent Research Fellow of Tohoku University (Title)</a></h3>
