--- a/users/templates/resource.html
+++ b/users/templates/resource.html
@@ -98,6 +98,11 @@
                     <ul>
                         <li><a href="{% static 'pdfs/lecture_spin.pdf' %}" target="_blank">Lecture note (PDF)</a></li>
                     </ul>
+            <h2>QSW2025 presentation</h2>
+                <div class="section">
+                    <ul>
+                        <li><a href="{% static 'pdfs/qsw2025.pptx' %}" target="_blank">Lecture note (PDF)</a></li>
+                    </ul>        
     </div>
     <footer>
         <p>&copy; 2025 Binho Le</p>
