add something new

--- a/users/templates/resource.html
+++ b/users/templates/resource.html
@@ -101,7 +101,7 @@
             <h2>QSW2025 presentation</h2>
                 <div class="section">
                     <ul>
-                        <li><a href="{% static 'pdfs/qsw2025.pptx' %}" target="_blank">Lecture note (PDF)</a></li>
+                        <li><a href="{% static 'pdfs/qsw2025.pptx' %}" target="_blank">Presentation (pptx)</a></li>
                     </ul>        
     </div>
     <footer>
