add something new

--- a/users/templates/event.html
+++ b/users/templates/event.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>People</title>
+    <title>Event</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,21 +55,29 @@
     <div class="main">
         <h1>Events</h1>
 <hr class="divider">
-        <div class="year">Up comming events</div>
+        <div class="year">Upcoming events</div>
             <div class="event">
-                <span class="date">2025 Jun 30</span>
-                FRIS seminar: Quantum network sensors for dark matter detection.
+                <span class="date">July 17-18, 2025 </span>
+                FRIS Retreat, ZAO, Japan.
             </div>
             <div class="event">
-                <span class="date">2025 July 7 - 12</span>
-                Quantum software workshop, Helsinki, Finland.
+                <span class="date">August 17-23, 2025 </span>
+                <a href="https://icisequynhon.com/conferences/2025/VSAIQC/program.html" target="_blank">Vietnam School of Artificial Intelligence and Quantum Computing</a>, held at ICISE, Quy Nhon, Vietnam.
+            </div>
+            <div class="event">
+                <span class="date">Sep 16-19, 2025 </span>
+                The Physical Society of Japan (JPS) meeting, Hiroshima, Japan.
             </div>
 
 <hr class="divider">
         <div class="year">Past events</div>
             <div class="event">
-                <span class="date">---</span>
-                ---
+                <span class="date">July 7-12, 2025</span>
+                Quantum software workshop, Helsinki, Finland.
+            </div>
+            <div class="event">
+                <span class="date">Jun 30, 2025</span>
+                FRIS seminar: Quantum network sensors for dark matter detection.
             </div>
 
 <hr class="divider">
