--- a/users/templates/visitor.html
+++ b/users/templates/visitor.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>People</title>
+    <title>Visitors</title>
     <style>
         body {
             font-family: Arial, sans-serif;
