add something new

--- a/users/templates/event.html
+++ b/users/templates/event.html
@@ -62,7 +62,7 @@
             </div>
             <div class="event">
                 <span class="date">August 17-23, 2025 </span>
-                <a href="https://icisequynhon.com/conferences/2025/VSAIQC/program.html" target="_blank">Vietnam School of Artificial Intelligence and Quantum Computing</a>, held at ICISE, Quy Nhon, Vietnam.
+                Vietnam School of Artificial Intelligence and Quantum Computing, ICISE, Quy Nhon, Vietnam.
             </div>
             <div class="event">
                 <span class="date">Sep 16-19, 2025 </span>
